2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (gptel-agent): Fix project guidelines
	not being properly inserted into session buffer. Guidelines are now
	collected and appended to the system message instead of being
	inserted directly into the buffer.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (read_file, grep, run_command): Enhance
	tool descriptions with detailed usage guidelines and examples.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Add forward
	declaration for ediff-window-setup-function to avoid byte-compiler
	warnings.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* init.el (clear-text-properties-in-region): New function to clear
	all text properties in the selected region using set-text-properties.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* AGENTS.md (Git and ChangeLog Conventions): Add guidance about
	mentioning new files in both ChangeLog and commit messages, and
	using git commit --amend when ChangeLog was missed initially.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-edit-file-async): Detect when
	running in a side window and switch to a proper window before
	starting ediff to avoid conflicts with ediff's window management
	requirements.

	* AGENTS.md: New file with project development guidelines and
	conventions.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (gptel-agent): Set
	gptel-include-tool-results to t locally.

2025-09-06  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (gptel-agent): New function.
	(kimi-agent): Update max-tokens to 8192, fix typo in system message.
	Add guidance about preferring dedicated tools over run_command.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (+gptel-edit-file-async):
	Update docstring.  Update error handling.

2025-09-05  Zhengyi Fu  <i@fuzy.me>

	* site-lisp/gptel-config.el (create_file): Prevent exiting files
	from being overwritten.
